layout: click logo redirect dashboard

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,7 +15,7 @@
 
   <link rel="canonical" href="https://demo-basic.adminkit.io/" />
 
-  <link rel="stylesheet" href="css/app-theme.css">
+  <!-- <link rel="stylesheet" href="css/app-theme.css"> -->
 
   <title> PawnShop </title>
 
